--- a/estilo/style.css
+++ b/estilo/style.css
@@ -94,6 +94,7 @@ header > p{
     padding-right: 10px;
     padding-left: 10px;
     margin: auto;
+    padding-bottom: 50px;
     text-shadow: 2px 2px rgba(19, 19, 19, 0.452);
 }
 
